bugfix: Missing margin on footer

--- a/src/containers/delete/style.css
+++ b/src/containers/delete/style.css
@@ -49,6 +49,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-right: var(--margin-02);
 }
 
 .delete .tags li {
